--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap");
+
+:root {
+  /* Primary colors */
+  --scissors-gradient: hsl(40, 84%, 53%), hsl(39, 89%, 49%);
+  --paper-gradient: hsl(230, 89%, 62%), hsl(230, 89%, 65%);
+  --rock-gradient: hsl(349, 71%, 52%), hsl(349, 70%, 56%);
+  --lizard-gradient: hsl(261, 73%, 60%), hsl(261, 72%, 63%);
+  --spock-gradient: hsl(189, 59%, 53%), hsl(189, 58%, 57%);
+
+  /* Neutral colors */
+  --dark-text: hsl(229, 25%, 31%);
+  --score-text: hsl(229, 64%, 46%);
+  --header-outline: hsl(217, 16%, 45%);
+
+  /* Background */
+  --radial-gradient: hsl(214, 47%, 23%), hsl(231,45%,17%);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +24,5 @@
 }
 
 body {
-  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "Barlow Semi Condensed", sans-serif;
 }
