--- a/src/Components/Game/result.module.css
+++ b/src/Components/Game/result.module.css
@@ -29,11 +29,13 @@
 }
 
 .result {
+  opacity: 0;
   font-size: 35px;
   text-transform: uppercase;
 }
 
 .btn {
+  opacity: 0;
   border-radius: 10px;
   border: none;
   font-size: 18px;
@@ -42,4 +44,8 @@
   color: var(--dark-text);
   width: 220px;
   height: 50px;
+}
+
+.visible {
+  opacity: 1;
 }
