--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -11,7 +11,7 @@
 }
 
 .logo {
-  margin: 10px;
+  margin: 12px;
 }
 
 .scoreWrapper {
@@ -19,7 +19,7 @@
   width: 80px;
   border-radius: 5px;
   background-color: #fff;
-  padding: 5px;
+  padding: 10px;
 }
 
 .heading {
@@ -30,5 +30,6 @@
 .counter {
   font-size: 38px;
   font-weight: 700;
+  line-height: 40px;
   color: var(--dark-text);
 }
