--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 17px;
 }
+
+@media screen and (min-width: 1366px) {
+  .App {
+    padding: 47px;
+  }
+}
