--- a/src/Components/Game/shape.module.css
+++ b/src/Components/Game/shape.module.css
@@ -36,7 +36,6 @@
   box-shadow: 0 4px inset hsl(227, 24%, 77%), 0 4px hsl(348, 74%, 35%);
 }
 .lizard {
-  position: absolute;
   top: 151px;
   left: -13px;
   background-image: linear-gradient(hsl(290, 12%, 90%), hsl(290, 12%, 90%)),
@@ -73,4 +72,43 @@
 
 .visible {
   opacity: 1;
+}
+
+@media screen and (min-width: 1366px) {
+  .shape {
+    height: 145px;
+    width: 145px;
+    border: double 18px transparent;
+  }
+
+  .scissors {
+    top: -76px;
+    left: 82px;
+  }
+
+  .paper {
+    top: 52px;
+    right: -80px;
+  }
+  .rock {
+    top: 238px;
+    right: -16px;
+  }
+  .lizard {
+    top: 238px;
+    right: -16px;
+  }
+
+  .spock {
+    top: 54px;
+    left: -80px;
+  }
+
+  .picked {
+    top: 40px;
+    left: -182px;
+    width: 300px;
+    height: 300px;
+    transform-style: preserve-3d;
+  }
 }
