--- a/src/Components/Game/selection.module.css
+++ b/src/Components/Game/selection.module.css
@@ -2,7 +2,7 @@
   position: relative;
   height: 200px;
   width: 200px;
-  margin: 0 auto;
+  margin: 147px auto 0;
   background: url("../../data/images/bg-pentagon.svg") center center/cover
     no-repeat;
 }
