--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,12 @@
   text-align: center;
   background-image: linear-gradient(var(--radial-gradient));
   width: 100%;
-  height: 750px;
   padding: 30px;
   overflow: hidden;
 }
 
 .container  {
-  height: 100%;
+  min-height: 100vh;
 }
 
 .btn {
