--- a/src/Components/Game/game.module.css
+++ b/src/Components/Game/game.module.css
@@ -1,7 +1,6 @@
 .container {
-  height: 200px;
+  /* height: 347px; */
   width: 100%;
-  margin: 147px auto 0;
 }
 
 @media screen and (min-width: 1366px) {
