--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .container  {
-  min-height: 100vh;
+  min-height: 768px;
 }
 
 .btn {
@@ -31,5 +31,7 @@
   .btn {
     position: absolute;
     right: 30px;
+    bottom: 30px;
+    margin: 0;
   }
 }
