--- a/src/Components/Game/shape.module.css
+++ b/src/Components/Game/shape.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  height: 95px;
+  height: 90px;
   width: 95px;
   margin: 0 auto;
   border: double 10px transparent;
@@ -59,10 +59,7 @@
 
 .picked {
   position: static;
-  top: -50px;
-  left: 0;
-  width: 130px;
-  height: 130px;
+  transform: scale(1.4) translateY(16px);
   transform-style: preserve-3d;
 }
 
@@ -78,45 +75,37 @@
 
 @media screen and (min-width: 1366px) {
   .shape {
-    height: 145px;
-    width: 145px;
+    transform: scale(1.56);
   }
 
   .scissors {
     top: -76px;
-    left: 82px;
-    /* box-shadow: 0 10px inset hsl(227, 24%, 77%), 0 10px hsl(28, 76%, 43%); */
+    left: 108px;
   }
 
   .paper {
     top: 52px;
-    right: -80px;
-    /* box-shadow: 0 10px inset hsl(227, 24%, 77%), 0 10px hsl(230, 66%, 47%); */
+    right: -55px;
   }
   .rock {
     top: 238px;
-    right: -16px;
-    /* box-shadow: 0 10px inset hsl(227, 24%, 77%), 0 10px hsl(348, 74%, 35%); */
+    right: 9px;
   }
   .lizard {
     top: 238px;
-    right: -16px;
-    /* box-shadow: 0 10px inset hsl(227, 24%, 77%), 0 10px hsl(261, 50%, 44%); */
+    left: 9px;
   }
 
   .spock {
     top: 54px;
-    left: -80px;
-    /* box-shadow: 0 10px inset hsl(227, 24%, 77%), 0 10px hsl(194, 60%, 43%); */
+    left: -55px;
   }
 
   .picked {
     top: 16px;
     left: -182px;
-    width: 300px;
-    height: 300px;
+    transform: scale(3.13) translateY(32px);
     transform-style: preserve-3d;
-    border: double 38px transparent;
   }
 
   .random {
